change list into span

--- a/style.css
+++ b/style.css
@@ -15,99 +15,47 @@ body{
 	height: 100vh;
 }
 
+a {
+	text-decoration: none;
+}
+
 #particles-js {
 	height: 100%;
 	background-color: #000;
 }
-
-.fly-in-text {
-	list-style: none;
+.user_name {
 	position: absolute;
-	left: 50%;
-	top: 30%;
-	transform: translateX(-50%) translateY(-50%);
-}
-
-.fly-in-text li {
+	left: 0;
+	top: 10%;
+	width: 100%;
+	text-align: center;
 	display: inline-block;
-	margin-right: 50px;
 	font-family: Sarpanch-SemiBold;
 	font-weight: 300;
 	font-size: 4em;
+	letter-spacing: 0.8em;
 	color: #fff;
 	opacity: 1;
-	transition: all 2.5s ease;
 }
-
-.fly-in-text li:last-child {
-	margin-right: 0;
-}
-
-.text {
-	list-style: none;
-	position: absolute;
-	left: 50%;
-	top: 40%;
-	transform: translateX(-50%) translateY(-50%);
-}
-
-.text li {
+.user_name span {
+	position: relative;
 	display: inline-block;
-	margin-right: 50px;
-	font-family: Sarpanch-SemiBold;
-	font-weight: 300;
-	font-size: 4em;
-	color: #fff;
-	opacity: 1;
-	transition: all 2.5s ease;
+	text-transform: uppercase;
+	width: 100%;
 }
 
-.text li:last-child {
-	margin-right: 0;
-}
-
-.text.hidden li {
-	opacity: 0;
-}
-
-.text1 {
-	list-style: none;
+.btn {
 	position: absolute;
-	left: 50%;
-	top: 50%;
-	transform: translateX(-50%) translateY(-50%);
-}
-
-.text1 li {
-	display: inline-block;
-	margin-right: 50px;
-	font-family: Sarpanch-SemiBold;
-	font-weight: 300;
-	font-size: 4em;
-	color: #fff;
-	opacity: 1;
-	transition: all 2.5s ease;
-}
-
-.text1 li:last-child {
-	margin-right: 0;
-}
-
-.text1.hidden li {
-	opacity: 0;
-}
-
-button {
-	position: absolute;
-	top: 70%;
-	left: 53%;
+	top: 80%;
+	left: calc(52% - 5px);
 	transform: translate(-70%, -70%);
 }
 
 button {
+	margin-top: 30px;
 	background: none;
 	color: #ccc;
-	width: 235px;
+	width: 260px;
 	height: 80px;
 	border: 1px solid #338033;
 	font-size: 18px;
@@ -122,9 +70,8 @@ button:focus {
 }
 
 button:before {
-	content: '';
 	display: block;
-	position: absolute;
+	position: relative;
 	background: rgba(255,255,255,.5);
 	width: 60px;
 	height: 100%;
@@ -136,9 +83,8 @@ button:before {
 }
 
 button:after {
-	content: '';
 	display: block;
-	position: absolute;
+	position: relative;
 	background: rgba(255,255,255,.2);
 	width: 30px;
 	height: 100%;
@@ -164,4 +110,21 @@ button:hover:after {
 	transform: translateX(300px) skewX(-15deg);
 	opacity: 1;
 	transition: .7s;
+}
+
+button.av_link {
+	border: 1px solid #ff0000;
+}
+
+button.av_link * {
+	color: #ccc;
+}
+
+button.av_link::after {
+	top: 90px;
+	left: 30px;
+}
+
+button.av_link:hover {
+	background: #ff0000;
 }
