--- a/game.css
+++ b/game.css
@@ -90,7 +90,16 @@ header > h1 {
     font-family: Asap,sans-serif;
     font-size: 30px;
     font-weight: bold;
-    margin-top: 80px;
+    margin-top: 35px;
+}
+
+#T_C {
+    text-align: center;
+    color: white;
+    font-family: Asap, sans-serif;
+    font-size: 15px;
+    font-weight: lighter;
+    margin-top: 15px;
 }
 
 .green-glow {
